# clipperd

./: Cargo.toml  README.md  dgpt  got.rs  install.sh
.github/workflows/: rust.yml
assets/: clippard.service
src/: clipboard.rs  clipperd.rs  main.rs  manage_clipboard.rs
src/manage_clipboard/: mod.rs
wix/: main.wxs
