[package]
name = "clippard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
enigo = "0.0.14"
magic-crypt = "3.1.12"
base64 = "0.21.0"
os_info = "3.6.0"
keybind = "0.1.0"
wl-clipboard-rs = "0.8.0"
x11-clipboard = "0.9.1"
