[package]
name = "clipperd"
version = "0.1.1"
edition = "2021"
authors = ["James Koonts <james@koonts.net>"]
description = "clipperd"
license = "MIT"
repository = "https://github.com/helloimalemur/clipperd"
keywords = ["clipperd", "clipboard"]
readme = "README.md"

[dependencies]

enigo = "0.0.14"
magic-crypt = "3.1.12"
keybind = "0.1.0"
x11-clipboard = "0.9.1"


[package.metadata.bundle]
name = "Clipperd"
identifier = "com.koonts.wordcount"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
#version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
#copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
#category = "Developer Tool"
short_description = "Clipperd"
#long_description = """
#Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
#eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
#enim ad minim veniam, quis nostrud exercitation ullamco laboris
#nisi ut aliquip ex ea commodo consequat.
#"""
#deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
#osx_frameworks = ["SDL2"]
#osx_url_schemes = ["com.doe.exampleapplication"]
